# Docflow

./: .gitignore  README.md  docker-compose.yml
airflow/dags/: generate_real_documents.py  monitor_containers.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: alerts.py  auth.py  business.py  documents.py
backend/app/db/: mongodb.py
backend/app/schemas/: business.py  document.py  fraud.py  user.py
backend/app/services/: classifier.py  cloudinary_storage.py  extractor.py  fraud.py  llm_json.py  ocr.py  pipeline.py
backend/app/storage/: datalake.py
backend/scripts/: generate_test_pdfs.py
backend/tests/: test_llm_json_parsing.py  test_ocr.py  test_schemas.py
doc/: DAT_DocFlow.md  bronze_silver_gold.md
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: CRM.tsx  Compliance.tsx  Login.tsx  Upload.tsx
frontend/src/types/: index.ts
